@@ -1,5 +1,6 @@
 Version 16.56 - 10 February 2015
-
+- i18n: Use the x-distro /etc/locale.conf file instead of /etc/sysconfig/i18n
+- drakedm: Do not use ancient dm init script to restart DM
 - service_harddrake:
   * add support for the new nvidia340 driver (mga#15255)
 
